--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <div id="install-banner">
         <p>Deseja instalar este app?</p>
         <button id="install-btn">Instalar</button>
+        <button id="cancel-btn">Não Instalar</button>
     </div>
 
     <script src="js/pokedex.js"></script>
